# GTIA2DVI

./: .gitattributes  .gitignore  .gitmodules  README.md
atari/: CALSCR.LST  CALSCR.TXT  CALSCR.xex
hardware/eagle/: GTIA2DVI.brd
hardware/prototype_v2/: GTIA2DVI.brd  GTIA2DVI.sch  readme.md
software/: CMakeLists.txt  pico_sdk_import.cmake
software/gtia2dvi/: CMakeLists.txt  app_menu.h  asm.S  burst.h  buttons.h  cfg.h  chroma.h  chroma2_trans_table.h  chroma_arr.h  chroma_calib.h  chroma_calibration.h  chroma_map_diagram.h  chroma_trans_table.h  clock_sync.h  color_burst.h  dvi_display.h  flash_storage.c  flash_storage.h  font6x8.h  font8x8.h  gfx.h  gfx_text.h  git_info.h.in  gtia_chroma_ng.pio  gtia_dump.h  gtia_luma_ng.pio  gtia_palette.h  hardware_cfg.h  main.c  menu.h  popcounts.h  post_boot.h  tmds_table_256.h  uart_dump.h  uart_rx.pio  video_channel.h
software/gtia2dvi/gfx/: font6x8.h  font7x8.h  font8x8.h  gfx.h  gfx_text.h
software/gtia2dvi/images/: atari000_image.h  atari000_rgb565.h  atari001_image.h  atari001_palette.h  atari001_rgb565.h  atari002_image.h  atari002_rgb565.h  atari003_image.h  atari003_rgb565.h  input.txt  output.txt  pal_888_to_565.py  palette_gtia_pal.h  to_rgb565_header.py
software/gtia2dvi/pio/: gtia_burst.pio  gtia_chroma_ng.pio  gtia_chroma_v2.pio  gtia_color.pio  gtia_dump.pio  gtia_luma_ng.pio  gtia_pal.pio  gtia_pal_gen.pio  uart_8n1_tx.pio
software/gtia2dvi/ui/: app_menu.h  menu.h  prompt.h
software/gtia2dvi/util/: buttons.h  flash_storage.h  post_boot.h  uart_log.h
